# GrooveGraph

./: .env.example  .gitignore  AGENTS.md  README.md  README_APP.md  groovegraph-dev.code-workspace  groovegraph-workspace.code-workspace  knip.json  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.cli.json  tsconfig.json
cli/: README.md  pyproject.toml
cli/src/groovegraph/: __init__.py  analyze_workflow.py  brave_extract_context.py  brave_probe.py  brave_search.py  canonical_sources.py  catalog_search.py  catalog_types.py  doctor.py  draft_ingest.py  entity_service_block.py  entity_service_errors.py  entity_service_schema_probe.py  env_loader.py  (+18 more)
cli/tests/: conftest.py  test_analyze_workflow.py  test_brave_extract_context.py  test_brave_search_standalone_e2e.py  test_canonical_sources.py  test_canonical_sources_mocktransport.py  test_catalog_search_normalize.py  test_catalog_types_parse.py  test_core_env_services_connectivity.py  test_doctor_real_services_e2e.py  test_doctor_unit.py  test_draft_ingest_dedupe.py  test_entity_service_errors.py  test_entity_service_schema_pipeline_e2e.py  test_ingest_models.py  test_ner_health.py  test_pending_query_build.py  test_repo_layout_e2e.py  test_schema_bootstrap.py  test_schema_define_lists_expected_types.py  test_schema_raw_request_body.py  test_schema_slice_formatted_only.py  test_search_workflow.py  test_stimulus_compose.py  test_tql_escape.py  test_type_schema_parse.py  test_typedb_catalog_requirements.py  test_typedb_direct_smoke_e2e.py  test_typedb_ingest_and_pending_e2e.py
(+527 files in other folders)
